--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site is created by Priyanka Parihar.It uses data from mapbox.com</p>
         <img class="potrait" src="/img/robot.png" />
     </div>
     {{>footer}}
